<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">vsudoku</string>
    <string name="action_newGame">New Game</string>
    <string name="action_test">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>  
    <string name="correct">C</string>

</resources>
