<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal">
        
       <com.volvet.vsudoku.SudokuBoardView
           android:id="@+id/vsudoku_board"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:keepScreenOn="true"
           />   
     </LinearLayout>   
        
     <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">        
            
        <LinearLayout android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <Button android:id="@+id/button_1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
	            android:layout_weight="1"
				android:text="@string/number_1"/>
            <Button android:id="@+id/button_2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
			    android:layout_weight="1"
				android:text="@string/number_2"/>
            <Button android:id="@+id/button_3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
			    android:layout_weight="1"
				android:text="@string/number_3"/>
            <Button android:id="@+id/button_4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
			    android:layout_weight="1"
				android:text="@string/number_4"/>
            <Button android:id="@+id/button_5"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
			    android:layout_weight="1"
				android:text="@string/number_5"/>                
        </LinearLayout>
        
        <LinearLayout android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <Button android:id="@+id/button_6"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
	            android:layout_weight="1"
				android:text="@string/number_6"/>
            <Button android:id="@+id/button_7"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
			    android:layout_weight="1"
				android:text="@string/number_7"/>
            <Button android:id="@+id/button_8"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
			    android:layout_weight="1"
				android:text="@string/number_8"/>
            <Button android:id="@+id/button_9"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
			    android:layout_weight="1"
				android:text="@string/number_9"/>
            <Button android:id="@+id/button_c"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
			    android:layout_weight="1"
				android:text="@string/correct"/>                
        </LinearLayout>
        
    </LinearLayout>
     

</RelativeLayout>
